--- a/package.json
+++ b/package.json
@@ -4,37 +4,38 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "webpack-dev-server -d --open --content-base src/",
-		"build": "webpack -p"
+		"start": "webpack-dev-server -d --open --content-base src/",
+		"build": "webpack",
+		"build:prod": "webpack -p"
 	},
 	"author": "ardian shala",
 	"license": "ISC",
 	"dependencies": {
-		"@types/angular": "^1.6.34",
-		"@types/angular-material": "^1.1.54",
-		"@types/angular-route": "^1.3.4",
-		"@types/node": "^7.0.22",
-		"angular": "^1.6.6",
-		"angular-animate": "^1.6.6",
-		"angular-aria": "^1.6.6",
-		"angular-hammer": "^2.2.0",
-		"angular-material": "^1.1.5",
-		"angular-route": "^1.6.6",
-		"hammerjs": "^2.0.8"
+		"@types/angular": "1.6.51",
+		"@types/angular-material": "1.1.59",
+		"@types/node": "10.11.6",
+		"@uirouter/angularjs": "^1.0.20",
+		"angular": "1.7.5",
+		"angular-animate": "1.7.5",
+		"angular-aria": "1.7.5",
+		"angular-hammer": "2.2.0",
+		"angular-material": "1.1.10",
+		"hammerjs": "2.0.8"
 	},
 	"devDependencies": {
-		"awesome-typescript-loader": "3.1.3",
-		"css-loader": "0.28.3",
-		"file-loader": "0.11.1",
-		"html-loader": "0.5.1",
+		"awesome-typescript-loader": "5.2.1",
+		"css-loader": "1.0.0",
+		"file-loader": "2.0.0",
+		"html-loader": "0.5.5",
 		"ngtemplate-loader": "2.0.1",
-		"node-sass": "^4.5.3",
-		"sass-loader": "^6.0.5",
-		"style-loader": "0.18.1",
-		"typescript": "2.5.3",
-		"url-loader": "0.5.8",
-		"webpack": "2.6.1",
-		"webpack-bundle-analyzer": "^2.9.0",
-		"webpack-dev-server": "2.4.5"
+		"node-sass": "4.9.3",
+		"sass-loader": "7.1.0",
+		"style-loader": "0.23.1",
+		"typescript": "2.9.2",
+		"url-loader": "1.1.2",
+		"webpack": "4.20.2",
+		"webpack-bundle-analyzer": "3.0.2",
+		"webpack-cli": "^3.0.8",
+		"webpack-dev-server": "3.1.9"
 	}
 }
