--- a/package.json
+++ b/package.json
@@ -4,38 +4,43 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "webpack-dev-server -d --open --content-base src/",
-		"build": "webpack",
-		"build:prod": "webpack -p"
+		"start": "webpack-dev-server --mode development --open",
+		"build": "webpack --mode development",
+		"build:prod": "webpack --mode production"
 	},
 	"author": "ardian shala",
 	"license": "ISC",
 	"dependencies": {
-		"@types/angular": "1.6.51",
-		"@types/angular-material": "1.1.59",
-		"@types/node": "10.11.6",
-		"@uirouter/angularjs": "^1.0.20",
-		"angular": "1.7.5",
-		"angular-animate": "1.7.5",
-		"angular-aria": "1.7.5",
+		"@types/angular": "1.6.54",
+		"@types/angular-material": "1.1.68",
+		"@types/node": "12.0.10",
+		"@uirouter/angularjs": "1.0.20",
+		"angular": "1.7.8",
+		"angular-animate": "1.7.8",
+		"angular-aria": "1.7.8",
 		"angular-hammer": "2.2.0",
-		"angular-material": "1.1.10",
+		"angular-material": "1.1.19",
 		"hammerjs": "2.0.8"
 	},
 	"devDependencies": {
-		"awesome-typescript-loader": "5.2.1",
+		"clean-webpack-plugin": "^3.0.0",
+		"copy-webpack-plugin": "^5.0.3",
 		"css-loader": "1.0.0",
-		"file-loader": "2.0.0",
+		"file-loader": "3.0.1",
 		"html-loader": "0.5.5",
+		"html-webpack-plugin": "^3.2.0",
+		"mini-css-extract-plugin": "^0.7.0",
 		"ngtemplate-loader": "2.0.1",
-		"node-sass": "4.9.3",
+		"node-sass": "4.12.0",
 		"sass-loader": "7.1.0",
 		"style-loader": "0.23.1",
-		"typescript": "2.9.2",
+		"ts-loader": "5.3.2",
+		"typescript": "3.5.2",
+		"uglifyjs-webpack-plugin": "^2.1.3",
 		"url-loader": "1.1.2",
-		"webpack": "4.20.2",
-		"webpack-bundle-analyzer": "3.0.2",
-		"webpack-cli": "^3.0.8",
-		"webpack-dev-server": "3.1.9"
+		"webpack": "4.35.0",
+		"webpack-bundle-analyzer": "3.3.2",
+		"webpack-cli": "3.3.5",
+		"webpack-dev-server": "3.7.2"
 	}
 }
